completed input field on footer, fixed overlap issues on hero section. added .gitignore

--- a/ex3/css/main.css
+++ b/ex3/css/main.css
@@ -612,6 +612,10 @@ video {
   margin-top: 2.25rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -658,6 +662,34 @@ video {
 
 .w-5\/6 {
   width: 83.333333%;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-2\/12 {
+  width: 16.666667%;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
 }
 
 .flex-row {
@@ -788,6 +820,10 @@ video {
   border-width: 2px;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-gray-600 {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
@@ -843,6 +879,16 @@ video {
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.bg-es_fair_pink {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 208 192 / var(--tw-bg-opacity));
+}
+
 .p-6 {
   padding: 1.5rem;
 }
@@ -883,6 +929,10 @@ video {
   padding: 4rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -921,6 +971,10 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-center {
@@ -984,6 +1038,10 @@ video {
   color: rgb(244 243 239 / var(--tw-text-opacity));
 }
 
+.outline {
+  outline-style: solid;
+}
+
 .hover\:bg-es_green:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(63 103 69 / var(--tw-bg-opacity));
@@ -1011,6 +1069,10 @@ video {
 
   .sm\:w-1\/2 {
     width: 50%;
+  }
+
+  .sm\:w-4\/6 {
+    width: 66.666667%;
   }
 
   .sm\:flex-row {
@@ -1075,6 +1137,10 @@ video {
     width: 83.333333%;
   }
 
+  .md\:w-80 {
+    width: 20rem;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1089,6 +1155,18 @@ video {
 
   .md\:items-center {
     align-items: center;
+  }
+
+  .md\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
   }
 
   .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
@@ -1118,6 +1196,10 @@ video {
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:pl-2 {
+    padding-left: 0.5rem;
   }
 
   .md\:text-left {
@@ -1156,5 +1238,15 @@ video {
   .lg\:text-8xl {
     font-size: 6rem;
     line-height: 1;
+  }
+}
+
+@media (min-width: 1440px) {
+  .xl\:w-1\/2 {
+    width: 50%;
+  }
+
+  .xl\:w-3\/5 {
+    width: 60%;
   }
 }
